--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p></p><a href="https://github.com/Mustafaazeez/PRC-4/blob/main/Summer%20training%20handout%204%20days.pdf">Click here For Event Info</a></p>
+  <p></p><a href="Summer%20training%20handout%204%20days.pdf">Click here For Event Info</a></p>
 </html>
